force-app/main/default/objects/pse__Missing_Timecards__c/fields/pse__Check_Assignments_for_internal_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Check_Assignments_for_internal_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine whether to treat internal resources as External resources</description>
    <label>Check Assignments for internal Resource</label>
    <type>Checkbox</type>
</CustomField>