force-app/main/default/objects/pse__Missing_Timecards__c/fields/pse__Ignore_Closed_Assignments__c.field-meta.xml
<CustomField>
    <fullName>pse__Ignore_Closed_Assignments__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Ignore assignments closed for time entry or whose projects are closed for time entry.</description>
    <label>Ignore Closed Assignments</label>
    <type>Checkbox</type>
</CustomField>