force-app/main/default/objects/pse__Missing_Timecards__c/fields/pse__Use_Resource_Work_Calendar_Week_Start__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Resource_Work_Calendar_Week_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, MTC will utilize the resource&apos;s work calendar to determine which day of of the week that the week starts on. If the resource has no work calendar, it will utilize the R/P/G WC depending on how the job is run.</description>
    <label>Use Resource Work Calendar Week Start</label>
    <type>Checkbox</type>
</CustomField>